# MLOps_Predictive_Maintenance

./: .pre-commit-config.yaml  README.md  infer.py  main_inf.py  main_train.py  pyproject.toml
.zen/: config.yaml
data/: artifact.pkl  create_model.ipynb  test.ipynb  train_failures.csv
docs/: short_report.md  technical_desing.md
src/models/metrics/: evaluation_results.json
src/pipeline/: inference_pipeline.py  train_pipeline.py
src/steps/: evaluate_model.py  predict.py  preprocess_data.py  preprocess_inference.py  save_model.py  train_model.py
