[project]
name = "mlops_project"
version = "0.1.0"
description = "MLOps project from Azure Predicitive Maintenance"
requires-python = ">=3.10"
dependencies = [
    "black==25.1.0",
    "isort==6.0.1",
    "ruff==0.12.5",
    "pandas==2.2.2",
    "scikit-learn==1.4.1.post1",
    "pyyaml==6.0.1",
    "ipykernel==6.29.4",
    "zenml[server]==0.84.0",
    "fastapi",
    "jwt",
    "multipart",
    "zenml[mlflow]"
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "isort==6.0.1",
    "ruff==0.12.5",
    "pre-commit"
]
